Fixed the paddings of the components on small screen sizes

--- a/styles/ThemeToggler.module.css
+++ b/styles/ThemeToggler.module.css
@@ -3,7 +3,7 @@
   display: inline-block;
   cursor: pointer;
   padding: 0;
-  margin: 0;
+  margin: 0 0.4em 0 0;
   width: 5rem;
   height: 2rem;
   border: 0.125rem solid var(--clr-text);
